서체 변경 - Noto Sans

--- a/css/box.css
+++ b/css/box.css
@@ -55,6 +55,7 @@ body {
   justify-content: center;
   align-items: center;
   perspective: 1000px;
+  font-family: "Noto Sans KR", sans-serif;
 }
 .text {
   /* color: gold; */
