--- a/css/box.css
+++ b/css/box.css
@@ -56,6 +56,7 @@ body {
   align-items: center;
   perspective: 1000px;
   font-family: "Noto Sans KR", sans-serif;
+  overflow: hidden;
 }
 .text {
   /* color: gold; */
@@ -228,4 +229,13 @@ body {
   background: silver;
   left: -10px;
   animation: up-particle 2.5s 2s infinite linear;
+}
+.ball {
+  width: 10px;
+  height: 10px;
+  background: green;
+  /* border-radius: 50%; */
+  position: absolute;
+  bottom: 0;
+  left: 0;
 }
